sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:10: error: illegal start of simple expression
     while (( ((i+j*ecart) <= getNombreValeurs-1 ) || (i+(j-1)*ecart>=0)) && if (getValeur(i+j*ecart) < getValeur(i+(j-1)*ecart)){
                                                                             ^AlgShellSort:22: error: ')' expected but '}' found.
   }
   ^